--- a/data/gemserver/views/index.erb
+++ b/data/gemserver/views/index.erb
@@ -25,9 +25,11 @@
     <% end %>
     </tbody>
   </table>
+
+  <p>To upload more, drag .gem files into this window.</p>
 <% else %>
 
-  <p>No gems are published.</p>
+  <p>No gems are published. To upload some, drag .gem files into this window.</p>
 
 <% end %>
 
