--- a/data/gemserver/views/details.erb
+++ b/data/gemserver/views/details.erb
@@ -3,26 +3,44 @@
   <p>No gems found matching '<%= h gemname %>'</p>
 <% else %>
 
-  <% gemspec = gems.first %>
+  <% gemspec = gems.last %>
   
   <h2><%= h gemspec.name %> <%= h gemspec.version.to_s %></h2>
   <p class="gem-description"><%= h gemspec.description %></p>
 
-  <dl>
-    <dt>Released</dt>
-    <dd><%= h gemspec.date.strftime('%Y/%m/%d') %></dd>
-
-    <dt>Author</dt>
-    <dd><%= h gemspec.author %></dd>
-
-    <dt>Dependencies</dt>
-    <% if gemspec.dependencies.empty? %>
-    <dd>None.</dd>
-    <% else %>
-    <dd><%= gemspec.dependencies.
-      collect {|dep| %{<span class="dependency">%s</span>} % dep.to_s }.join(', ') %></dd>
-    <% end %>
-  </dl>
+  <table class="metadata horizontal">
+	<tbody>
+		<tr class="odd">
+		    <th class="odd">Released</th>
+		    <td class="even"><%= h gemspec.date.strftime('%Y/%m/%d') %></td>
+		</tr>
+		<tr class="even">
+		    <th class="odd">Author</th>
+		    <td class="even"><%= h gemspec.author %></td>
+		</tr>
+		<tr class="odd">
+		    <th class="odd">Dependencies</th>
+	    <% if gemspec.dependencies.empty? %>
+		    <td class="even">None.</td>
+	    <% else %>
+		    <td class="even">
+					<ul class="dependencies">
+				<% gemspec.dependencies.sort_by {|dep| dep.name }.each do |dep| %>
+			      <li>
+							<span class="dep-name"><%= h dep.name %></span>
+							<span class="dep-details">
+								<span class="dep-requirement"><%= h dep.requirement %></span>,
+								<span class="dep-type"><%= h dep.type %></span>
+							</span>
+						</li>
+				<% end %>
+					</ul>
+	    <% end %>
+				</td>
+	
+		</tr>
+	</tbody>
+  </table>
 
   <% if gems.length > 1 %>
   <h3>Other Matches For <%= dependency.to_s %></h3>
@@ -37,7 +55,7 @@
     </thead>
 
     <tbody>
-    <% gems[1..-1].each_with_index do |gemspec, i| %>
+    <% gems[0..-2].each_with_index do |gemspec, i| %>
     <% if (i % 2).nonzero? %>
       <tr class="odd">
     <% else %>
