--- a/data/gemserver/public/css/master.css
+++ b/data/gemserver/public/css/master.css
@@ -172,9 +172,7 @@ table tr.even td.even {
 body > header {
 	display: block;
 	width: 100%;
-	position: fixed;
-	left: 0;
-	top: 45px;
+	position: relative;
 	z-index: -5;
 }
 
@@ -182,15 +180,17 @@ body > header h1 {
 	text-align: center;
 	margin: 0 auto;
 	font-size: 120px;
-	color: rgba( 25,25,25, 0.05 );
-	text-shadow: 0 0 5px rgba( 25,25,25, 0.2 );
+	color: rgba( 25,25,25, 0.15 );
+	text-shadow: 0 0 15px rgba( 25,25,25, 0.4 );
 }
 body > header h2 {
-	text-align: center;
-	position: relative;
-	top: -30px;
 	font-size: 50px;
-	color: rgba(25,25,25, 0.8);
+	width: 100%;
+	text-align: center;
+	color: #eee;
+	text-shadow: 0 0 3px rgba( 25,25,25, 0.5 );
+	position: absolute;
+	top: 25px;
 }
 
 body > nav {
@@ -218,7 +218,7 @@ body > footer p {
 }
 
 section#main {
-	margin-top: 60px;
+	margin-top: 40px;
 	text-align: center;
 }
 
@@ -367,6 +367,7 @@ ul.dependencies li .dep-name {
 	padding: 0 0.5em;
 	border: 1px solid rgba( 100,100,100, 0.5 );
 	border-radius: 0.5em;
+	-moz-border-radius: 0.5em;
 	background: rgba( 240,240,240, 0.5 );
 }
 ul.dependencies .dep-details {
