Starting converting the app to run from a gem.

--- a/data/gemserver/views/layout.erb
+++ b/data/gemserver/views/layout.erb
@@ -11,9 +11,14 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
 
-	<link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" 
-		title="master" charset="utf-8" />
+  <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" 
+	title="master" charset="utf-8" />
 
+  <script defer="defer" src="/js/jquery-1.4.2.min.js" type="text/javascript" defer="defer" charset="utf-8"></script>
+  <script defer="defer" src="/js/jquery.tools-1.2.3.min.js" type="text/javascript" defer="defer" charset="utf-8"></script>
+  <script defer="defer" src="/js/jquery.filedrop.js" type="text/javascript" defer="defer" charset="utf-8"></script>
+  <script defer="defer" src="/js/gemserver.js" type="text/javascript" defer="defer" charset="utf-8"></script>
+		
 </head>
 <body>
 
@@ -58,11 +63,5 @@
 		</p>
 	</footer>
 
-	<script src="/js/jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/js/jquery.tools-1.2.3.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/js/jquery.filedrop.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/js/jquery.progressbar.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/js/gemserver.js" type="text/javascript" charset="utf-8"></script>
-		
 </body>
 </html>
