--- a/data/gemserver/views/layout.erb
+++ b/data/gemserver/views/layout.erb
@@ -12,11 +12,13 @@
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
 
   <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" 
-	title="master" charset="utf-8" />
+		title="master" charset="utf-8" />
+	<link rel="stylesheet" href="/css/overcast/jquery-ui-1.8.9.custom.css" type="text/css" />	
 
-  <script defer="defer" src="/js/jquery-1.4.2.min.js" type="text/javascript" defer="defer" charset="utf-8"></script>
-  <script defer="defer" src="/js/jquery.tools-1.2.3.min.js" type="text/javascript" defer="defer" charset="utf-8"></script>
-  <script defer="defer" src="/js/jquery.filedrop.js" type="text/javascript" defer="defer" charset="utf-8"></script>
+	<script defer="defer" src="/js/jquery-1.4.4.min.js" type="text/javascript" charset="utf-8"></script>
+	<script defer="defer" src="/js/jquery-ui-1.8.9.custom.min.js" type="text/javascript" charset="utf-8"></script>
+	<script defer="defer" src="/js/jquery.fileupload.js" type="text/javascript" charset="utf-8"></script>
+	<script defer="defer" src="/js/jquery.fileupload-ui.js" type="text/javascript" charset="utf-8"></script>
   <script defer="defer" src="/js/gemserver.js" type="text/javascript" defer="defer" charset="utf-8"></script>
 		
 </head>
