--- a/data/gemserver/views/index.erb
+++ b/data/gemserver/views/index.erb
@@ -39,7 +39,7 @@
 		<label for="gem-upload-field">Gems to upload</label>
 		<input type="file" multiple="true" name="gem" value="" id="gem-upload-field" />
 
-		<p><input type="submit" value="Upload &rarr;" /></p>
+		<input type="submit" value="Upload &rarr;" />
 	</form>
 
 	<table class="uploaded-files"></table>
