--- a/data/gemserver/public/css/master.css
+++ b/data/gemserver/public/css/master.css
@@ -8,6 +8,8 @@
  *
  */
 
+@import url(overcast/jquery-ui-1.8.9.custom.css);
+
 /* @group Entity styles */
 
 html {
@@ -120,50 +122,58 @@ table td.icon img {
 table th {
 	padding: 1px 0.5em;
 }
+
 table th.odd {
 	background-color: #f6f6f6;
 }
+
 table th.even {
 	background-color: #e5e5e5;
 }
+
 table tr.even th.odd {
 	background-color: #ddd;
 }
+
 table tr.odd {
 	background-color: #f6ecbf;
 }
+
 table tr.odd td.even {
 	background-color: #e6ddb2;
 }
+
 table tr.even {
 	background-color: #decda8;
 }
+
 table tr.even td.even {
 	background-color: #c8b897;
 }
 
-
 #main dl, #main dt, #main dd {
-    margin: 0;
-    padding: 0;
-    line-height: 1.4em;
-}
-#main dl.metadata {
-    display: inline;
-    width: 50%;
-}
-#main dl dt {
-    float: left;
-    clear: left;
-    width: 20%;
-    font-weight: bold;
-}
-#main dl dd {
-    float: left;
-    width: 65%;
-    padding-left: 2em;
+	margin: 0;
+	padding: 0;
+	line-height: 1.4em;
 }
 
+#main dl.metadata {
+	display: inline;
+	width: 50%;
+}
+
+#main dl dt {
+	float: left;
+	clear: left;
+	width: 20%;
+	font-weight: bold;
+}
+
+#main dl dd {
+	float: left;
+	width: 65%;
+	padding-left: 2em;
+}
 
 /* @end */
 
@@ -183,6 +193,7 @@ body > header h1 {
 	color: rgba( 25,25,25, 0.15 );
 	text-shadow: 0 0 15px rgba( 25,25,25, 0.4 );
 }
+
 body > header h2 {
 	font-size: 50px;
 	width: 100%;
@@ -362,7 +373,9 @@ ul.dependencies {
 }
 
 ul.dependencies li {
+	
 }
+
 ul.dependencies li .dep-name {
 	padding: 0 0.5em;
 	border: 1px solid rgba( 100,100,100, 0.5 );
@@ -370,6 +383,7 @@ ul.dependencies li .dep-name {
 	-moz-border-radius: 0.5em;
 	background: rgba( 240,240,240, 0.5 );
 }
+
 ul.dependencies .dep-details {
 	color: #666;
 	font-size: 11px;
@@ -382,11 +396,14 @@ ul.dependencies .dep-details {
 footer .vcsrev {
 	float: right;
 }
+
 footer .name {
+	
 }
 
 td.gem-description {
 	text-align: left;
+	max-width: 400px;
 }
 
 .graph svg {
@@ -400,4 +417,81 @@ td.gem-description {
 	-moz-box-shadow: 1px 1px 5px #333;
 }
 
+form.file-upload {
+	display: inline-block;
+	outline: none;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+	padding: .5em 2em .55em;
+	text-shadow: 0 1px 1px rgba(0,0,0,.3);
+	-webkit-border-radius: .5em;
+	-moz-border-radius: .5em;
+	border-radius: .5em;
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+	box-shadow: 0 1px 2px rgba(0,0,0,.2);
+	color: #e9e9e9;
+	border: solid 1px #555;
+	background: #6e6e6e;
+	background-image: -webkit-gradient(linear, 
+		left top, 
+		left bottom, 
+		from(#888), 
+		to(#575757)
+	);
+	background-image: -moz-linear-gradient( top,  #888,  #575757 );
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#888888', endColorstr='#575757');
+}
+
+form.file-upload:hover {
+	text-decoration: none;
+	background: #616161;
+	background: -webkit-gradient(linear, left top, left bottom, from(#757575), to(#4b4b4b));
+	background: -moz-linear-gradient(top,  #757575,  #4b4b4b);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#757575', endColorstr='#4b4b4b');
+}
+
+form.file-upload:active {
+	position: relative;
+	top: 1px;
+	color: #afafaf;
+	background: -webkit-gradient(linear, left top, left bottom, from(#575757), to(#888));
+	background: -moz-linear-gradient(top,  #575757,  #888);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#575757', endColorstr='#888888');
+}
+
+
+form.file-upload input {
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 0;
+	border: 300px solid transparent;
+	opacity: 0;
+	-ms-filter: 'alpha(opacity=0)';
+	filter: alpha(opacity=0);
+	-o-transform: translate(0, -300px) scale(6);
+	cursor: pointer;
+	z-index: 2;
+}
+
+form.file-upload iframe, .file-upload button {
+	display: none;
+}
+
+.file-upload-progress .ui-progressbar-value {
+	background: url(pbar-ani.gif);
+}
+
+.file-upload-progress div {
+	width: 150px;
+	height: 15px;
+}
+
+form.file-upload-cancel div {
+	cursor: pointer;
+}
 /* @end */
+
+
