--- a/data/gemserver/public/css/master.css
+++ b/data/gemserver/public/css/master.css
@@ -24,8 +24,13 @@ html {
 
 body {
 	background: #f0f0f2;
-	background-image: -webkit-gradient(radial, 50% 0, 625, 50% 15%, 50, from(#A8A8A9), to(#ddd));
-	background-image: -moz-radial-gradient(top, farthest-side, #ddd, #A8A8A9);
+	background-image: -webkit-gradient(radial, 
+		50% 0, 625, 
+		50% 15%, 50, 
+		from(#A8A8A9), to(#ddd));
+	background-image: -moz-radial-gradient(
+		top, farthest-side, 
+		#ddd, #A8A8A9);
 	margin: 0;
 	min-width: 420px;
 	padding: 4em 2em;
@@ -243,14 +248,79 @@ section#main table {
 }
 
 section#upload {
-	position: absolute;
-	z-index: 5;
-	left: 17%;
-	top: 100px;
-	text-align: center;
-	width: 65%;
-	margin: 50px auto;
-	display: none;
+	padding: 1em;
+	text-align: left;
+	width: 60%;
+	margin: 5px auto;
+	background: #999;
+	border-radius: 1em
+}
+
+section#upload label {
+	color: #666;
+	font-size: 1.2em;
+	padding: 0 0.5em;
+}
+section#upload input[type=file] {
+	background: #eee;
+	border-radius: 1em;
+	width: 60%;
+}
+
+section#upload input[type=submit] {
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-box-shadow: 0px 0px 2px rgba(0,0,0,0.4);
+	-webkit-box-shadow: 0px 0px 2px rgba(0,0,0,0.4);
+
+	color: rgba(0,0,0,0.9);
+	text-shadow: 1px 1px 0px rgba(255,255,255,0.8);
+	border: 1px solid rgba(0,0,0,0.5);
+	
+	background: -webkit-gradient( linear,
+		0% 0%,
+		0% 100%,
+		from(rgba(255,255,255,1)),
+		to(rgba(185,185,185,1))
+	);
+	background: -moz-linear-gradient( top,
+		rgba(255,255,255,1),
+		rgba(185,185,185,1)
+	);
+
+}
+
+section#upload input[type=submit]:hover {
+	background:rgba(240,240,240,1);
+	background: -webkit-gradient( linear,
+		0% 0%,
+		0% 100%,
+		from(rgba(255,255,255,1)),
+		to(rgba(210,210,210,1))
+	);
+	background: -moz-linear-gradient( top,
+		rgba(255,255,255,1),
+		rgba(210,210,210,1)
+	);
+}
+
+button:active, button:focus {
+	background: -webkit-gradient( linear,
+		0% 100%, 
+		0% 0%,
+		from(rgba(255,255,255,1)),
+		to(rgba(185,185,185,1))
+	);
+	background: -moz-linear-gradient( bottom,
+		rgba(255,255,255,1),
+		rgba(185,185,185,1)
+	);
+}
+
+button:disabled {
+	color:rgba(0,0,0,0.4);
+	text-shadow:1px 1px 0px rgba(255,255,255,0.5);
+	background:rgba(220,220,220,1);
 }
 
 section#upload.targeted {
@@ -261,9 +331,11 @@ section#upload.uploading {
 	display: block;
 }
 
-section#upload #dropzone {
-	width: 50%;
-	margin: 50px auto 10px;
+#dropzone {
+	display: none;
+	position: absolute;
+	top: 35%;
+	left: 35%%;
 	opacity: 0.5;
 	border: 3px dashed rgba( 85,85,85, 0.4 );
 	border-radius: 35px;
@@ -281,11 +353,11 @@ section#upload #dropzone {
 		rgba(25,25,25, 0.25));
 }
 
-section#upload #dropzone.targeted {
+#dropzone.targeted {
 	opacity: 1.0;
 }
 
-section#upload #dropzone.uploading {
+#dropzone.uploading {
 	display: none;
 }
 
@@ -417,81 +489,6 @@ td.gem-description {
 	-moz-box-shadow: 1px 1px 5px #333;
 }
 
-form.file-upload {
-	display: inline-block;
-	outline: none;
-	cursor: pointer;
-	text-align: center;
-	text-decoration: none;
-	padding: .5em 2em .55em;
-	text-shadow: 0 1px 1px rgba(0,0,0,.3);
-	-webkit-border-radius: .5em;
-	-moz-border-radius: .5em;
-	border-radius: .5em;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-	box-shadow: 0 1px 2px rgba(0,0,0,.2);
-	color: #e9e9e9;
-	border: solid 1px #555;
-	background: #6e6e6e;
-	background-image: -webkit-gradient(linear, 
-		left top, 
-		left bottom, 
-		from(#888), 
-		to(#575757)
-	);
-	background-image: -moz-linear-gradient( top,  #888,  #575757 );
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#888888', endColorstr='#575757');
-}
-
-form.file-upload:hover {
-	text-decoration: none;
-	background: #616161;
-	background: -webkit-gradient(linear, left top, left bottom, from(#757575), to(#4b4b4b));
-	background: -moz-linear-gradient(top,  #757575,  #4b4b4b);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#757575', endColorstr='#4b4b4b');
-}
-
-form.file-upload:active {
-	position: relative;
-	top: 1px;
-	color: #afafaf;
-	background: -webkit-gradient(linear, left top, left bottom, from(#575757), to(#888));
-	background: -moz-linear-gradient(top,  #575757,  #888);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#575757', endColorstr='#888888');
-}
-
-
-form.file-upload input {
-	position: absolute;
-	top: 0;
-	right: 0;
-	margin: 0;
-	border: 300px solid transparent;
-	opacity: 0;
-	-ms-filter: 'alpha(opacity=0)';
-	filter: alpha(opacity=0);
-	-o-transform: translate(0, -300px) scale(6);
-	cursor: pointer;
-	z-index: 2;
-}
-
-form.file-upload iframe, .file-upload button {
-	display: none;
-}
-
-.file-upload-progress .ui-progressbar-value {
-	background: url(pbar-ani.gif);
-}
-
-.file-upload-progress div {
-	width: 150px;
-	height: 15px;
-}
-
-form.file-upload-cancel div {
-	cursor: pointer;
-}
 /* @end */
 
 
