More work getting cross-browser d'n'd upload to work, and more interface experimentation.

--- a/data/gemserver/public/css/master.css
+++ b/data/gemserver/public/css/master.css
@@ -1,4 +1,7 @@
-/* @override http://localhost:9292/css/master.css */
+/* @override 
+	http://localhost:9292/css/master.css
+	http://localhost:9392/css/master.css
+*/
 
 /*
  *	Gemserver Stylesheet
