--- a/data/gemserver/views/layout.erb
+++ b/data/gemserver/views/layout.erb
@@ -14,8 +14,9 @@
   <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" 
 		title="master" charset="utf-8" />
 
-	<script defer="defer" src="/js/jquery-1.4.4.min.js" type="text/javascript" charset="utf-8"></script>
-	<script defer="defer" src="/js/jquery.fileupload.js" type="text/javascript" charset="utf-8"></script>
+  <script defer="defer" src="/js/jquery-1.4.4.min.js" type="text/javascript" charset="utf-8"></script>
+  <script defer="defer" src="/js/jquery.fileupload.js" type="text/javascript" charset="utf-8"></script>
+  <script defer="defer" src="/js/jquery.fileupload-ui.js" type="text/javascript" charset="utf-8"></script>
   <script defer="defer" src="/js/gemserver.js" type="text/javascript" defer="defer" charset="utf-8"></script>
 		
 </head>
