--- a/data/gemserver/views/index.erb
+++ b/data/gemserver/views/index.erb
@@ -46,7 +46,16 @@
 		<input type="submit" value="Upload &rarr;" id="gem-upload-button" />
 	</form>
 
-	<div id="upload-progress">
-	</div>
+	<p>Select one or more gems to upload.</p>
+
+	<table class="uploads">
+	<tbody>
+		<tr class="upload-row">
+			<td class="filename">filename-1.0.8.gem</td>
+			<td class="progress"></td>
+			<td class="cancel">Cancel</td>
+		</tr>
+	</tbody>
+	</table>
 </section>
 
