--- a/data/gemserver/views/layout.erb
+++ b/data/gemserver/views/layout.erb
@@ -49,7 +49,7 @@
 
 	<footer>
 		<p>
-			<span class="name">Gemserver</span>
+			<span class="name"><%= Gemserver.version_string %></span>
 			<span class="vcsrev">$Revision$</span>
 		</p>
 	</footer>
